Almost done, 95%. Forgot to explain commits

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,6 +3,8 @@ prefix: '&6&lBAN &r&6>>&r '
 
 sender-not-player: '&cYou must be a player to execute this command.'
 no-permission: '&cYou do not have permission to execute this command.'
+player-already-banned: '&cThat player is already banned.'
+player-not-banned: '&cThat player is not banned.'
 
 ban-usage: '&cUsage: /ban <player> [duration] [reason]'
 unban-usage: '&cUsage: /unban <player>'
