--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,4 +15,7 @@ commands:
   history:
     description: View a player's ban history
     permission: bantrial.history
+  clearall:
+    description: Clear all bans
+    permission: bantrial.clearall
 
